add level, backgrounds

--- a/public/index.html
+++ b/public/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>MarioJS</title>
+    <script type="module" src="/js/main.js"></script>
 </head>
 <body>
-    Hello World!
+    <canvas id="screen" width="640" height="448"></canvas>
 </body>
 </html>
