--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>MarioJS</title>
     <script type="module" src="/js/main.js"></script>
+    <link rel="stylesheet" href="/css/styles.css" />
 </head>
 <body>
-    <canvas id="screen" width="640" height="480"></canvas>
+    <div class="screen-container">
+        <canvas id="screen" width="1000" height="480"></canvas>
+    </div>
 </body>
 </html>
