--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,14 @@
 <body>
     <div class="screen-container">
         <canvas id="screen" width="1280" height="480"></canvas>
+        <div id="dashboard">
+          <ul>
+            <li><button class="key">←</button> Move left</li>
+            <li><button class="key">→</button> Move right</li>
+            <li><button class="key">Space</button> Jump</li>
+            <li><button class="key">↑ Shift</button> Acceleration</li>
+          </ul>
+        </div>
     </div>
 </body>
 </html>
